tests/fixtures/valid/docs_match.lby
enum Shape
    Circle i64
    Rect i64 i64
    Empty

fn area s Shape -> i64
    match s
        Circle(r) -> r * r
        Rect(w, h) -> w * h
        Empty -> 0

fn main -> i64
    area(Rect(4, 5))
